Stage 0 - Bug Fix
Change some layout issues and game play img, score bug

--- a/MusashiGames/MusashiGames.css
+++ b/MusashiGames/MusashiGames.css
@@ -44,10 +44,9 @@ body{
     background-color:  rgb(40, 40, 40);
     /* border: 50px rgb(216, 165, 165); */
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
 }
 #Mulogo{
-    /* margin-top: 2vh; */
     padding-left: 6vh;
 }
 #MuGameNavi{
@@ -57,7 +56,7 @@ body{
     z-index: 3;
 }
 #rightBar{
-    margin-top: 69px;
+    margin-top: 77px;
     right: 70px;
     position: absolute;
     display: flex;
@@ -234,7 +233,6 @@ body{
 
 /* After Start Game */
 #gameStats{
-    margin-top: 40px;
     margin-left: 40px;
     visibility: hidden;
     display: flex;
@@ -258,6 +256,7 @@ body{
     left: 40px;
 }
 #targetBar{
+    margin-left: -25px;
     overflow: hidden;
     position: relative;
     display: flex;
@@ -267,17 +266,7 @@ body{
     background-color:transparent;
     height: 6.5vh;
 }
-#stopBtn{
-    border: none;
-    background-color: transparent;
-}
-#stop:hover {
-    width: 50px;
-}
-#playBtn{
-    border: none;
-    background-color: transparent;
-}
+
 #pauseBtn{
     border: none;
     background-color: transparent;
@@ -335,11 +324,15 @@ body{
     border-radius: 10px;
     visibility: hidden;
     width: 100%;
+    padding-bottom: 15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     position: absolute;
     top: 290px;
+    font-weight: bold;
+    font-family: 'Poppins-Thin', 'arial'; 
+    text-align: center;
 }
 #gameOverIcon{
     margin-left: 30px;
@@ -348,13 +341,10 @@ body{
     color: rgb(255, 255, 255);
     margin-top: -45px;
     font-size: 50px;
-    font-weight: bold;
-    font-family: 'Poppins-Thin', 'arial'; 
-    text-align: center;
     flex-basis: 100%;
 }
 #tryAgain{
-    position: absolute;
+    position: relative;
     margin-top: 10px;
     width: 100%;
     display: flex;
@@ -365,12 +355,8 @@ body{
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     border-radius: 8px;
-    visibility: hidden;
     position: relative;
     font-size: 15px;
-    font-weight: bolder;
-    font-family: 'Poppins-Thin', 'arial'; 
-    text-align: center;
 }
 #tryAgainBtn:hover{
     background-color: rgb(70, 69, 69);
